# vibe-halt

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  Makefile  README.md  VISION.md  rust-toolchain.toml
.github/workflows/: ci.yml  codex-publish-trigger.yml  codex-publish.yml  verify.yml
clients/python/: pyproject.toml
clients/python/tests/: test_evidence.py
clients/python/vibe_halt/: __init__.py  cli.py
clients/python/vibe_halt/core/: evidence.py  properties.py  runner.py  sandbox.py
corpus/: PLAYBOOK.md  SCHEMA.md
corpus/entries/: VB-001-lost-update.md  VB-002-retry-double-apply.md  VB-003-dirty-read.md  VB-004-crash-toctou.md  VB-005-fsync-lie-hole.md  VB-006-same-timestamp-race.md  VB-007-stale-redispatch.md  VB-008-unvalidated-checkpoint.md  VB-009-transient-fatal-abort.md  VB-010-resume-replay.md  VB-011-blind-stream-append.md
crates/vh-cli/: Cargo.toml
crates/vh-cli/src/: bundle.rs  lib.rs  main.rs  receipts.rs  sandbox_demo.rs  shrink_cli.rs  workloads.rs
crates/vh-cli/src/workloads/: corpus.rs  disk.rs  mod.rs  net.rs
crates/vh-cli/tests/: cli_contract.rs  corpus_oracle_facts.rs  demo.rs
crates/vh-core/: Cargo.toml
crates/vh-core/src/: clock.rs  lib.rs  rng.rs  sched.rs  seed.rs  strategy.rs
crates/vh-gremlin/: Cargo.toml
crates/vh-gremlin/src/: lib.rs
crates/vh-multiverse/: Cargo.toml
crates/vh-multiverse/src/: evidence.rs  lib.rs  observation.rs  runtime.rs
crates/vh-multiverse/src/observation/: decode.rs
crates/vh-multiverse/tests/: divergence.rs  runtime.rs
crates/vh-props/: Cargo.toml
crates/vh-props/src/: lib.rs
crates/vh-sandbox/: Cargo.toml
crates/vh-sandbox/src/: capability.rs  lib.rs  tests.rs
crates/vh-shrink/: Cargo.toml
crates/vh-shrink/src/: lib.rs
crates/vh-shrink/tests/: corpus_shrink.rs  multiverse_integration.rs  shrink.rs
crates/vh-trace/: Cargo.toml
crates/vh-trace/src/: lib.rs
crates/vh-verify/: Cargo.toml
crates/vh-verify/src/: lib.rs  main.rs
crates/vh-verify/tests/: divergence.rs  loop5_audit.rs  prng_reference.rs  replay_soak.rs  scheduler.rs  seed_tree.rs  sim_runtime.rs  trace_framing.rs
docs/audits/antithesis-dst-2026-07-21/: ANTITHESIS_DOSSIER.md  CODEX_AUDIT_CHARTER_2026-07-22.md  CONVERGENCE_LEDGER_2026-07-22.md  DHARMA_CODEBASE_AUDIT.md  EVIDENCE_LEDGER.jsonl  EXECUTIVE_VERDICT.md  FIRST_PRINCIPLES_AND_TARGET_ARCHITECTURE.md  INTEGRATION_ROADMAP.md  LANDSCAPE_AND_OSS.md  SOURCE_MANIFEST.csv
docs/audits/antithesis-dst-2026-07-21/commands/: cli-runs.txt  convergence-c0-reanchor.txt  convergence-c1-decision-tape.txt  convergence-c2-pct.txt  convergence-c3-clockskew.txt  convergence-c4-evidence-store.txt  convergence-c5-shrink-boundary.txt  convergence-c6-harvest-1.txt  convergence-c7-doctrine.txt  corpus-recall.txt  denylist-direct.txt  determinism-runs.txt  make-gate.txt  make-onboard-py311.txt  make-onboard.txt  make-test.txt  throughput-seed.txt  track2-w0-housekeeping.txt  track2-w1-swarm-bakeoff.txt  track2-w2-decision-tape-substrate.txt
docs/audits/antithesis-dst-2026-07-21/lanes/: LANE_A_LOCAL_AUDIT.md  LANE_B_ANTITHESIS.md  LANE_C_LANDSCAPE.md
docs/governance/: ACTIVE_TRACK.yaml
docs/plans/: VIBE_HALT_BUILD_PLAN_2026-07-20.md  VIBE_HALT_PHASE1_NIGHT_PLAN_2026-07-20.md
docs/prompts/: CODEX_NIGHT_ADDENDUM_2026-07-20.md  CODEX_PR2_MASTER_SPEC_2026-07-20.md  CONVERGENCE_CAMPAIGN_EXECUTOR_2026-07-22.md  TRACK1_NIGHT_GOAL_2026-07-20.md  TRACK1_PHASE1_SANDBOX_GOAL_2026-07-21.md  TRACK2_1000X_INSTANTIATION_2026-07-21.md  VIBE_HALT_EVIDENCE_LOCKED_EVOLUTION_FORGE_LONG_RUNNING_GOAL_2026-07-23.md  VIBE_HALT_POST_AUDIT_TIER2_REACH_LONG_RUNNING_GOAL_2026-07-22.md
docs/specs/: DETERMINISM_TIERS.md  SANDBOX_CAPABILITY_ENVELOPE_V1.md  TRACE_FORMAT_V0.md
scripts/: check_determinism_denylist.py  check_governance.py  gate.sh  onboard.py  track2_pct_bakeoff.py  track2_swarm_bakeoff.py
vibe_halt/core/: faults.py  rng.py
