[workspace]
resolver = "2"
members = [
    "crates/vh-core",
    "crates/vh-trace",
    "crates/vh-gremlin",
    "crates/vh-props",
    "crates/vh-multiverse",
    "crates/vh-cli",
]

# Zero external dependencies by design: the determinism kernel builds
# offline, hermetically, on any machine with the pinned toolchain.
# Adding a dependency to a kernel crate requires a determinism review
# (see CLAUDE.md — Determinism Deny-List).

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/AmitabhainArunachala/vibe-halt"

[profile.release]
# Reproducibility over raw speed for now; revisit in Phase 3.
codegen-units = 1
