[project]
name = "vibe-halt"
version = "0.1.0"
description = "Mega Hyper Vibration Multiverse Halting Machine - DST harness for vibe-coded code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.scripts]
vibe-halt = "vibe_halt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vibe_halt"]
