[package]
name = "vh-shrink"
description = "Tier-1 deterministic ddmin shrinker for vibe-halt fault plans"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vh-gremlin = { path = "../vh-gremlin" }

[dev-dependencies]
vh-multiverse = { path = "../vh-multiverse" }

[lints]
workspace = true
